--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     body.dark header{background:rgba(18,18,18,.8);border-bottom:1px solid rgba(255,255,255,.1);}
     header h2{margin:0;}
     nav{display:flex;gap:.8rem;align-items:center;}
-    nav a{padding:.4rem 1rem;border-radius:12px;font-weight:500;text-decoration:none;color:inherit;}
+    nav a{padding:.4rem 1rem;border-radius:12px;font-weight:500;text-decoration:none;color:inherit;transition:background .2s,color .2s;}
     nav a.active,nav a:hover{background:var(--accent);color:#000;}
 
     /* 🔍 Ikon search */
@@ -42,9 +42,6 @@
       box-shadow:0 2px 6px rgba(0,0,0,.2);z-index:2000;
     }
     body.dark .theme-toggle{background:var(--card-dark);color:#fff;}
-    @media(max-width:600px){
-      .theme-toggle{top:12px;right:12px;left:auto;bottom:auto;}
-    }
 
     /* Search bar */
     #searchBarWrap{
@@ -83,12 +80,64 @@
     .loader{border:4px solid #f3f3f3;border-top:4px solid var(--accent);border-radius:50%;width:40px;height:40px;animation:spin 1s linear infinite;margin-bottom:1rem;}
     @keyframes spin{0%{transform:rotate(0deg);}100%{transform:rotate(360deg);}}
 
+
     /* Modal Notifikasi */
     #customModal{position:fixed;inset:0;display:none;align-items:center;justify-content:center;background:rgba(0,0,0,.5);z-index:4000;}
     .modal-box{background:#fff!important;color:var(--text-light);padding:1.5rem;border-radius:16px;max-width:300px;width:90%;text-align:center;box-shadow:0 6px 18px rgba(0,0,0,.2);animation:fadeIn .3s ease;display:flex;flex-direction:column;align-items:center;justify-content:center;}
     body.dark .modal-box{background:#1e1e1e!important;color:var(--text-dark);}
     @keyframes fadeIn{from{opacity:0;transform:scale(.9);}to{opacity:1;transform:scale(1);}}
     .modal-box button{margin-top:1rem;align-self:center;}
+
+
+    /* ======== PENYESUAIAN MOBILE ======== */
+    @media (max-width: 600px) {
+      /* Header vertikal */
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+        padding: 0.8rem 1rem 0.5rem;
+        gap: 0.3rem;
+      }
+
+      header h2 {
+        font-size: 1.2rem;
+        margin-bottom: 0.2rem;
+      }
+
+      /* Navigasi di bawah judul */
+      nav {
+        order: 2;
+        width: 100%;
+        justify-content: space-around;
+        margin-top: 0.2rem;
+      }
+
+      /* 🔹 Tombol navigasi lebih kecil */
+      nav a {
+        flex: 1;
+        text-align: center;
+        padding: 0.35rem 0.5rem;
+        font-size: 0.8rem;     /* Lebih kecil seperti di detail.html */
+        border-radius: 8px;
+      }
+
+      /* Tombol search di kanan atas */
+      .search-toggle {
+        position: absolute;
+        top: 10px;
+        right: 14px;
+        width: 34px;
+        height: 34px;
+      }
+
+      /* Tombol tema pindah kiri bawah */
+      .theme-toggle {
+        top: auto !important;
+        right: auto !important;
+        left: 15px !important;
+        bottom: 20px !important;
+      }
+    }
   </style>
 </head>
 <body>
@@ -177,7 +226,7 @@
       </div>`;
     }
 
-    // 🔄 Muat semua kategori (untuk search global)
+    // 🔄 Muat semua kategori
     async function loadAllPosts(){
       contentList.innerHTML="";
       noResultsEl.style.display="none";
@@ -221,7 +270,7 @@
       }catch(err){console.error(err);}
     }
 
-    // 🔎 Filter client-side
+    // 🔎 Filter client-side lintas kategori
     function filterCards(q){
       const cards=[...document.querySelectorAll(".card")];
       if(!q){cards.forEach(c=>c.style.display="");noResultsEl.style.display="none";return;}
@@ -236,28 +285,18 @@
 
     searchInput.addEventListener("keyup", async (e) => {
       const q = e.target.value.trim().toLowerCase();
-
       if (q) {
-        // Jika user baru mulai mengetik dan hanya 1 kategori termuat → muat semua kategori
         const cards = document.querySelectorAll(".card");
         const loadedCats = new Set([...cards].map(c => c.dataset.category));
-        if (loadedCats.size < 3) {
-          await loadAllPosts();
-        }
+        if (loadedCats.size < 3) await loadAllPosts();
         filterCards(q);
       } else {
-        // Jika input kosong → tampilkan kembali kategori aktif
         const active = document.querySelector("nav a.active");
-        if (active) {
-          loadCategory(active.dataset.tab);
-        } else {
-          loadAllPosts();
-        }
+        if (active) loadCategory(active.dataset.tab);
+        else loadAllPosts();
       }
     });
 
-
-    // ⏩ Load awal
     loadAllPosts();
   </script>
 </body>
